# tube

./: Cargo.toml  README  Rocket.toml
config/: default.toml
src/: main.rs  settings.rs
templates/: base.html.tera  index.html.tera
